Fixes for responsible mobile design
- Ensure that buttons text don't overflow using `white-space: normal`
- Ensure that user-provided text (election/question title, description,
  answers..) use `word-break: break-word` css setting to break the words
  in two if required because overflowing.
- Ensure that the warning messages in the affix-bottom during ballot
  selection doesn't prevent the next button to show nor they take too
  much space, by adding `overflow-y: scroll` to that section.
- Ensure power-by doesn't take two lines

--- a/avBooth/review-screen-directive/review-screen-directive.less
+++ b/avBooth/review-screen-directive/review-screen-directive.less
@@ -24,6 +24,10 @@
     padding: 0;
   }
 
+  .election-title {
+    word-break: break-all;
+  }
+
   .locator-text-click-audit {
     padding: 10px;
 
