--- a/avBooth/simultaneous-question-answer-directive/simultaneous-question-answer-directive.less
+++ b/avBooth/simultaneous-question-answer-directive/simultaneous-question-answer-directive.less
@@ -88,10 +88,12 @@
       .answer-text {
         font-size: 18px;
         font-weight: bold;
+        word-break: break-all;
       }
 
       .answer-details {
         font-size: 14px;
+        word-break: break-all;
       }
     }
 
